Geometry Nodes "Curve to Mesh" "Fill Cap" Option Crashes Blender #92662

Closed
opened 2021-10-30 23:38:13 +02:00 by Ebube Onyema · 9 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-29 18:17, hash: fcf1ba18f0
Worked: (newest version of Blender that worked as expected)

Short description of error
When you have a "Curve to Mesh" node with Fill caps on, adding a bevel modifier to the stack crashes Blender3D.

Exact steps for others to reproduce the error

  • Create a Geometry node tree with any curve primitive
  • Add a "Curve to Mesh" node
  • Turn on "Fill cap"
  • Add a "Bevel" Modifier to the Modifier Stack
    [Based on the default startup]bevel curve.blend
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-29 18:17, hash: `fcf1ba18f0` Worked: (newest version of Blender that worked as expected) **Short description of error** When you have a "Curve to Mesh" node with Fill caps on, adding a bevel modifier to the stack crashes Blender3D. **Exact steps for others to reproduce the error** - Create a Geometry node tree with any curve primitive - Add a "Curve to Mesh" node - Turn on "Fill cap" - Add a "Bevel" Modifier to the Modifier Stack [Based on the default startup][bevel curve.blend](https://archive.blender.org/developer/F11627287/bevel_curve.blend)
Author

Added subscriber: @ebubenative

Added subscriber: @ebubenative

#92648 was marked as duplicate of this issue

#92648 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @stakatch

Added subscriber: @stakatch
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-11-01 19:01:45 +01:00
Member

Thanks for the simple test file, it saved me some time. Fix incoming.

Thanks for the simple test file, it saved me some time. Fix incoming.

This issue was referenced by b6c2deef05

This issue was referenced by b6c2deef05cbaa015c74a0c5b1b0451686de49f6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92662
No description provided.