source/blender/blenkernel/intern/curve_to_mesh_convert.cc
@@ -202,7 +202,9 @@ static void spline_extrude_to_mesh_data(const ResultInfo &info,
       const int i_inv = info.profile_edge_len - i - 1;
       MLoop &loop_start = r_loops[cap_loop_offset + i];
       loop_start.v = info.vert_offset + i_inv;
-      loop_start.e = profile_edges_start + i_inv;
+      loop_start.e = profile_edges_start + ((i == (info.profile_edge_len - 1)) ?
+                                                (info.profile_edge_len - 1) :
+                                                (i_inv - 1));
       MLoop &loop_end = r_loops[cap_loop_offset + info.profile_edge_len + i];
       loop_end.v = last_ring_vert_offset + i;
       loop_end.e = last_ring_edge_offset + i;
